--- a/secualize - copia/views/lista_reservas.ejs
+++ b/secualize - copia/views/lista_reservas.ejs
@@ -1,42 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row mt-5">
-        <h1 class="text-center border-botton">Lista de Reservas</h1>
-        <div class="col">
-          <div class="col-md-3 mb-2">
-            <a href="/crear-reserva" class="btn btn sm btn-primary" id
-              >Nuevo
-            </a>
-            <a href="/" class="btn btn-info text-light">Inicio</a>
-          </div>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Código</th>
-                <th>nombre</th>
-                <th>apellido</th>
-                <th>fecha_ingreso</th>
-                <th>fecha_salida</th>
-                <th>habitacion</th>
-                <th>cantidad_personas</th>
-                <th>telefono</th>
-                <th>email</th>
-                <th>Acciones</th>
-              </tr>
-            </thead>
-            <tbody id="listadoReservas"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+<%- include('partials/header') %>
 
-    <script src="/js/listado-reservas.js"></script>
-  </body>
-</html>
+<div class="container">
+  <div class="row mt-5">
+    <h1 class="text-center border-botton">Lista de Reservas</h1>
+    <div class="col">
+      <div class="col-md-3 mb-2">
+        <a href="/crear" class="btn btn sm btn-primary" id>Nuevo </a>
+        <a href="/" class="btn btn-info text-light">Inicio</a>
+      </div>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Código</th>
+            <th>nombre</th>
+            <th>apellido</th>
+            <th>fecha Ingreso</th>
+            <th>fecha Salida</th>
+            <th>habitacion</th>
+            <th>cantidad Personas</th>
+            <th>telefono</th>
+            <th>email</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody id="listadoReservas"></tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script src="/listado-reserva.js"></script>
+
+<%- include('partials/footer') %>
